deployments/applications/backend/services/server/overlays/localkube/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: server
  namespace: python-visitors-backend-localkube
spec:
  hosts:
    - ""
  gateways:
    - istio-system/gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: server
            port:
              number: 8080
